--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 body {
+  padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -9,7 +10,7 @@ body {
 
 .title {
   position: absolute;
-  top: 100px;
+  top: 80px;
   left: 100px;
   z-index: 10;
   font-size: 88px;
@@ -21,7 +22,7 @@ body {
 
 .search-container {
   position: absolute;
-  top: 230px;
+  top: 210px;
   left: 100px;
   width: 400px;
   height: 60px;
@@ -53,4 +54,60 @@ body {
 
 .fas {
   color: #ffffff;
+}
+
+.store-list-container {
+  width: 400px;
+  border-radius: 30px;
+  background-color: white;
+  position: absolute;
+  left: 100px;
+  top: 300px;
+  bottom: 15px;
+  z-index: 10;
+}
+
+/************ Popup ************/
+div.mapboxgl-popup-content {
+  min-width: 300px;
+  font-size: 14px;
+  padding: 10px;
+  box-shadow: 0px 0px 5px 1px grey;
+}
+
+div.mapboxgl-popup-content .popup-heading {
+  font-size: 22px;
+  font-weight: bold;
+  color: rgb(0, 0, 0, 0.87);
+  padding: 0px;
+}
+
+div.mapboxgl-popup-content p {
+  margin-bottom: 6px;
+  margin-top: 6px;
+  color: rgb(0, 0, 0, 0.6);
+}
+
+div.mapboxgl-popup-content div {
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+}
+
+.popup-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(97, 96, 96);
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  margin-right: 5px;
+}
+
+.popup-icon-info a,
+.popup-icon-info {
+  text-decoration: none;
+  color: #514c4c;
+  outline: none;
 }
